--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body style="text-align:center;font-family:Verdana;margin:1%;">
         <h1 style="color:navy">Welcome to Our Website!</h1>
+        <p>Author: Marta Kozak UA-4597-DevOpsAdvanced</p>
         <hr>
         <p>This is a simple, static website that we deploy by creating a pipeline on AWS CodePipeline using AWS CodeCommit</p>
         <h2>Website Version: 3.0</h2>
